--- a/Recyclables/package.json
+++ b/Recyclables/package.json
@@ -10,11 +10,18 @@
     "author": "Chang Zu He, Lim Zi Chen Cavell, Ang Kai Xin",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.4",
         "express": "^4.16.4",
-        "express-handlebars": "^3.0.0",
+        "express-handlebars": "^3.1.0",
         "express-session": "^1.15.6",
-        "method-override": "^3.0.0"
+        "handlebars": "^4.7.7",
+        "method-override": "^3.0.0",
+        "moment": "^2.29.1",
+        "mysql2": "^2.3.3",
+        "password-validator": "^5.2.1",
+        "sequelize": "^6.15.0",
+        "uuidv4": "^6.2.12"
     }
 }
