--- a/Recyclables/package.json
+++ b/Recyclables/package.json
@@ -16,6 +16,7 @@
         "express": "^4.16.4",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.15.6",
+        "googleapis": "^39.2.0",
         "handlebars": "^4.7.7",
         "method-override": "^3.0.0",
         "moment": "^2.29.1",
